--- a/charts/console/values.yaml
+++ b/charts/console/values.yaml
@@ -41,13 +41,13 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+  className: "ngnix"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: kubefirst.example.com
       paths:
         - path: /
           pathType: ImplementationSpecific
