--- a/charts/api/values.yaml
+++ b/charts/api/values.yaml
@@ -7,6 +7,7 @@ replicaCount: 1
 image:
   repository: public.ecr.aws/kubefirst/api
   pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
   tag: "0.0.1"
 
 imagePullSecrets: []
@@ -16,9 +17,13 @@ fullnameOverride: ""
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
+  # Annotations to add to the service account
+  annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: api-sa
+  name: ""
+
+podAnnotations: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -33,42 +38,47 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 443
+  port: 80
 
 ingress:
-  enabled: true
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    # Change to "letsencrypt-staging" while testing adjustments, change to "letsencrypt-prod" after confirming LE certificate was issued
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: api.gh.mgmt.kubefirst.com
+    - host: api.example.local
       paths:
-        - /
-  tls:
-    - secretName: api-tls
-      hosts:
-        - api.gh.mgmt.kubefirst.com
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-resources:
-  limits:
-    cpu: 100m
-    memory: "128Mi"
-  requests:
-    cpu: 40m
-    memory: "64Mi"
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
-
-vaultMountPoint: kubefirst
-vaultSecretPath: api
 
 env: []
