--- a/charts/api/templates/serviceaccount.yaml
+++ b/charts/api/templates/serviceaccount.yaml
@@ -4,6 +4,9 @@ kind: ServiceAccount
 metadata:
   name: {{ include "api.serviceAccountName" . }}
   labels:
-{{ include "api.labels" . | nindent 4 }}
-automountServiceAccountToken: true
-{{- end -}}
+    {{- include "api.labels" . | nindent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
