--- a/charts/api/templates/tests/test-connection.yaml
+++ b/charts/api/templates/tests/test-connection.yaml
@@ -3,13 +3,13 @@ kind: Pod
 metadata:
   name: "{{ include "api.fullname" . }}-test-connection"
   labels:
-{{ include "api.labels" . | nindent 4 }}
+    {{- include "api.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": test-success
+    "helm.sh/hook": test
 spec:
   containers:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "api.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "api.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
