--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
 dependencies:
 - name: console
-  repository: https://chartmuseum.mgmt-20.kubefirst.com
-  version: 2.8.0-rc.46f6b09
+  repository: https://charts.kubefirst.com
+  version: 2.8.0
 - name: kubefirst-api
-  repository: https://chartmuseum.mgmt-20.kubefirst.com
-  version: 0.13.0-rc.2706604
+  repository: https://charts.kubefirst.com
+  version: 0.13.0
 - name: mongodb
   repository: oci://registry-1.docker.io/bitnamicharts
   version: 13.10.3
