--- a/.github/workflows/chart-releaser.yaml
+++ b/.github/workflows/chart-releaser.yaml
@@ -33,8 +33,7 @@ jobs:
         uses: goodsmileduck/helm-push-action@v2
         env:
           SOURCE_DIR: './charts'
-          CHART_FOLDER: "${GITHUB_REPOSITORY_NAME_PART}"
-          FORCE: 'True'
+          CHART_FOLDER: "kubefirst"
           CHARTMUSEUM_URL: 'https://charts.kubefirst.com'
           CHARTMUSEUM_USER: '${{ secrets.CHARTMUSEUM_USER }}'
           CHARTMUSEUM_PASSWORD: ${{ secrets.CHARTMUSEUM_PASSWORD }}
