--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -1,12 +1,13 @@
 apiVersion: v2
 dependencies:
 - name: console
-  repository: https://charts.kubefirst.com
-  version: 2.8.0
+  repository: https://chartmuseum.mgmt-20.kubefirst.com
+  version: 2.9.0
 - name: kubefirst-api
-  repository: https://charts.kubefirst.com
-  version: 0.13.0
+  repository: https://chartmuseum.mgmt-20.kubefirst.com
+  version: 0.14.0
 - name: mongodb
+  condition: mongodb.enabled
   repository: oci://registry-1.docker.io/bitnamicharts
   version: 13.10.3
 description: kubefirst helm chart
