--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
 dependencies:
 - name: console
-  repository: https://chartmuseum.kubefirst.com
+  repository: https://charts.kubefirst.com
   version: 2.9.0
 - name: kubefirst-api
-  repository: https://chartmuseum.kubefirst.com
+  repository: https://charts.kubefirst.com
   version: 0.14.0
 - name: mongodb
   condition: mongodb.enabled
@@ -13,4 +13,4 @@ dependencies:
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 0.0.3
+version: 0.0.4
