feat: adds publish for macro helm chart (#44)
* move console and kubefirst api to app repos add kubefirst chart

* new hostname and production charts

* new action

* trigger

* adopt helm push gh action

* fix chart name

* fix chart version

* try new gh action with dependency install

* try new gh action with dependency install

* try new gh action with dependency install

* update chart path

* use api v2 with chart type

* run helm dependency update first

* make mongodb optional and acommodate atlas url

* fix version

* bump macro chart version

* bump macro chart version

* release latest macro chart

* release latest macro chart

* test chart publisher with removed dependencies

* fix chart url

* fix merge conflicts

--- a/.github/workflows/chart-releaser.yaml
+++ b/.github/workflows/chart-releaser.yaml
@@ -26,7 +26,14 @@ jobs:
         with:
           version: v3.10.0
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.4.1
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v4
+
+      - name: Push Helm Chart to ChartMuseum
+        uses: bsord/helm-push@v4.1.0
+        with:
+          username: '${{ secrets.CHARTMUSEUM_USER }}'
+          password: ${{ secrets.CHARTMUSEUM_PASSWORD }}
+          registry-url: 'https://charts.kubefirst.com'
+          chart-folder: charts/kubefirst
+          update-dependencies: true
