--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -6,6 +6,9 @@ dependencies:
   - name: kubefirst-api
     repository: https://charts.kubefirst.com
     version: 0.62.0
+  - name: kubefirst-api-ee
+    repository: https://charts.kubefirst.com
+    version: 0.1.0
   - name: mongodb
     condition: mongodb.enabled
     repository: https://charts.bitnami.com/bitnami
@@ -13,4 +16,4 @@ dependencies:
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.2.13
+version: 2.2.14-rc.1
