--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -2,10 +2,13 @@ apiVersion: v2
 dependencies:
   - name: console
     repository: https://charts.kubefirst.com
-    version: 2.29.0
+    version: 2.37.0
   - name: kubefirst-api
     repository: https://charts.kubefirst.com
-    version: 0.52.0
+    version: 0.65.0
+  - name: kubefirst-api-ee
+    repository: https://charts.kubefirst.com
+    version: 0.2.0-rc.e46aa11
   - name: mongodb
     condition: mongodb.enabled
     repository: https://charts.bitnami.com/bitnami
@@ -13,4 +16,4 @@ dependencies:
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.2.4
+version: 2.3.0-rc1
