--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,41 +1,6 @@
 mongodb:
   auth:
     existingSecret: kubefirst-initial-secrets
-# global:
-#   kubefirstVersion: v2.2.14
-
-
 global:
-  kubefirstVersion: "development"
-kubefirst-api:
-  clusterId: "v71g6u"
-  clusterType: "mgmt"
-  useTelemetry: "'true'"
-  kubefirstTeam: "'true'"
-  installMethod: "helm"
-  env:
-    - name: IN_CLUSTER
-      value: "'true'"
-console:
-  isClusterZero: "'false'"
-  ingress:
-    enabled: "true"
-    annotations:
-      kubernetes.io/ingress.class: "nginx"
-      cert-manager.io/cluster-issuer: "letsencrypt-prod"
-      # nginx.ingress.kubernetes.io/auth-signin: "https://vouch.feedkray.one/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err"
-      # nginx.ingress.kubernetes.io/auth-url: https://vouch.feedkray.one/validate
-      # nginx.ingress.kubernetes.io/auth-response-headers: X-Vouch-User
-      # nginx.ingress.kubernetes.io/auth-snippet: |
-      #   auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
-      #   auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
-      #   auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
-    hosts:
-      - host: kubefirst.feedkray.one
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - secretName: kubefirst-tls
-        hosts:
-          - kubefirst.feedkray.one
+#  kubefirstVersion: v2.2.14
+  kubefirstVersion: development
