--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 dependencies:
   - name: console
     repository: https://charts.kubefirst.com
-    version: 2.40.0-rc.a5fb52b
+    version: 2.39.0
   - name: kubefirst-api
     repository: https://charts.kubefirst.com
     version: 0.66.0-rc.452fef2
@@ -16,4 +16,4 @@ dependencies:
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.3.0-rc12
+version: 2.3.0-rc13
