--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -10,7 +10,7 @@ mongodb:
   auth:
     existingSecret: kubefirst-initial-secrets
 global:
-  kubefirstVersion: v2.3.4
+  kubefirstVersion: v2.3.5rc1
 #  kubefirstVersion: development
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
