--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -2,13 +2,13 @@ apiVersion: v2
 dependencies:
 - name: console
   repository: https://charts.kubefirst.com
-  version: 2.41.0
+  version: 2.42.0-rc.f44bd6d
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.72.0
+  version: 0.73.0-rc.c79a4fe
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
-  version: 0.4.0
+  version: 0.5.0-rc.5b63ff3
 - name: mongodb
   condition: mongodb.enabled
   repository: https://charts.bitnami.com/bitnami
@@ -16,4 +16,4 @@ dependencies:
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.3.5
+version: 2.3.6-rc1
