--- a/.github/workflows/chart-releaser.yaml
+++ b/.github/workflows/chart-releaser.yaml
@@ -37,3 +37,4 @@ jobs:
           registry-url: 'https://charts.kubefirst.com'
           chart-folder: charts/kubefirst
           update-dependencies: true
+          force: true
