--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -2,13 +2,13 @@ apiVersion: v2
 dependencies:
 - name: console
   repository: https://charts.kubefirst.com
-  version: 2.43.0
+  version: 2.43.1-rc1
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.76.0
+  version: 0.76.1-rc1
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
-  version: 0.6.0
+  version: 0.6.1-rc1
 - condition: mongodb.enabled
   name: mongodb
   repository: https://charts.bitnami.com/bitnami
