--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -5,7 +5,7 @@ dependencies:
   version: 2.44.0
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.78.0-rc.d9a562e
+  version: 0.78.0
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
   version: 0.7.0
