--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -5,11 +5,11 @@ dependencies:
   version: 2.45.0
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.84.0-rc.bd47361
+  version: 0.84.0
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
   version: 0.8.0
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.5-rc2
+version: 2.4.5
