--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,5 +1,5 @@
 global:
-  kubefirstVersion: v2.4.2-rc1
+  kubefirstVersion: v2.4.6
 #  kubefirstVersion: development
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
