--- a/charts/colony/Chart.yaml
+++ b/charts/colony/Chart.yaml
@@ -1,9 +1,12 @@
 apiVersion: v2
 dependencies:
-- name: colony-api
+- name: colony-push-agent 
   repository: https://charts.kubefirst.com
-  version: 0.1.0-rc.1d188f7
+  version: 0.1.0-rc.760d7a3
+- name: colony-pull-agent 
+  repository: https://charts.kubefirst.com
+  version: 0.1.0-rc.e77dcb2
 description: kubefirst helm chart
 name: colony
 type: application
-version: 0.1.0-rc8
+version: 0.1.0-rc9
