--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,6 +1,6 @@
 global:
-#  kubefirstVersion: v2.4.7
-  kubefirstVersion: development
+  kubefirstVersion: v2.4.8
+#  kubefirstVersion: development
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
 console:
