--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -5,7 +5,7 @@ dependencies:
   version: 2.46.0
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.92.0-rc.9117d2c
+  version: 0.92.0
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
   version: 0.8.0
