--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -2,13 +2,13 @@ apiVersion: v2
 dependencies:
 - name: console
   repository: https://charts.kubefirst.com
-  version: 2.46.1-rc0
+  version: 2.46.0
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.92.1-rc0
+  version: 0.92.0
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
-  version: 0.8.1-rc0
+  version: 0.8.0
 description: kubefirst helm chart
 name: kubefirst
 type: application
