--- a/charts/colony/Chart.yaml
+++ b/charts/colony/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 dependencies:
 - name: colony-agent
-  repository: https://charts.kubefirst.com
-  version: 0.1.4-rc.d72c90a
-description: kubefirst helm chart
+  repository: https://charts.konstruct.io
+  version: 0.1.4
+description: Colony helm chart
 name: colony
 type: application
-version: 0.1.0-rc119
+version: 0.1.0-rc120
