--- a/.argo/deliver-rc-chart.yaml
+++ b/.argo/deliver-rc-chart.yaml
@@ -11,7 +11,7 @@ spec:
         - - name: checkout
             templateRef:
               name: cwft-git
-              template: checkout-with-gitops
+              template: checkout-with-gitops-for-charts
               clusterScope: true
             arguments:
               parameters:
