chore: bump kubefirst chart to 2.4.14-rc23

--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,5 +1,5 @@
 global:
-  kubefirstVersion: v2.4.13
+  kubefirstVersion: v2.4.14-rc23
 #  kubefirstVersion: development
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
