--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -8,8 +8,8 @@ dependencies:
   version: 0.94.0-rc.783c644
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
-  version: 0.9.0
+  version: 0.10.0-rc.fc18c17
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.14-rc32
+version: 2.4.14-rc33
