--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -8,8 +8,8 @@ dependencies:
   version: 0.94.0
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
-  version: 0.10.0-rc.1f256f5
+  version: 0.10.0
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.14-rc37
+version: 2.4.14-rc38
