--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -8,8 +8,8 @@ dependencies:
   version: 0.95.0
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
-  version: 0.11.0-rc.9a8486e
+  version: 0.11.0
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.14-rc45
+version: 2.4.14-rc46
