fix: source filepath for chart version

--- a/.argo/promote.yaml
+++ b/.argo/promote.yaml
@@ -57,7 +57,7 @@ spec:
             arguments:
               artifacts:
                 - name: repo-source
-                  from: '{{steps.set-environment-version.outputs.artifacts.repo-source}}'
+                  from: '{{steps.set-environment-version-for-macro-chart.outputs.artifacts.repo-source}}'
               parameters:
                 - name: repoName
                   value: 'gitops'
