--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -8,8 +8,8 @@ dependencies:
   version: 0.95.0
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
-  version: 0.11.0
+  version: 0.12.0-rc.64ee610
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.14-rc56
+version: 2.4.14-rc57
