--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -5,11 +5,11 @@ dependencies:
   version: 2.51.0-rc.938c419
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.95.0
+  version: 0.96.0-rc.7d2c149
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
   version: 0.12.0-rc.64ee610
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.14-rc58
+version: 2.4.14-rc59
