Update call to argo workflow to kubefirst-release.yaml

--- a/.github/workflows/kubefirst-release.yaml
+++ b/.github/workflows/kubefirst-release.yaml
@@ -34,7 +34,7 @@ jobs:
         run: |
           echo "commit sha $GITHUB_SHA"
           argo version --short
-          argo submit .argo/release.yaml \
+          argo submit .argo/kubefirst-release.yaml \
             --generate-name="${GITHUB_REPOSITORY_NAME_PART}-release-${GITHUB_SHA_SHORT}-" \
             -p appName="${GITHUB_REPOSITORY_NAME_PART}" \
             -p branch="${GITHUB_REF_NAME}" \
