--- a/.argo/kubefirst-release.yaml
+++ b/.argo/kubefirst-release.yaml
@@ -69,7 +69,7 @@ spec:
             arguments:
               artifacts:
                 - name: repo-source
-                  from: '{{steps.increment-chart-minor.outputs.artifacts.repo-source}}'
+                  from: '{{steps.set-chart-versions.outputs.artifacts.repo-source}}'
               parameters:
                 - name: repoName
                   value: '{{workflow.parameters.appName}}'
