--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -2,14 +2,14 @@ apiVersion: v2
 dependencies:
 - name: console
   repository: https://charts.kubefirst.com
-  version: 2.51.0
+  version: steps.get-macro-chart-version.outputs.result
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.96.0
+  version: steps.get-macro-chart-version.outputs.result
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
-  version: 0.12.0
+  version: steps.get-macro-chart-version.outputs.result
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.14-rc62
+version: steps.get-macro-chart-version.outputs.result
