tagged kubefirst-api in charts kubefirst-v2.4.15-rc2

--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,7 +1,6 @@
-global:
-  kubefirstVersion: 2.4.14
-#  kubefirstVersion: development
-kubefirst-api-ee:
-  existingSecret: kubefirst-initial-secrets
 console:
   domain: kubefirst.dev
+global:
+  kubefirstVersion: 2.4.15-rc2
+kubefirst-api-ee:
+  existingSecret: kubefirst-initial-secrets
