--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -5,11 +5,11 @@ dependencies:
   version: 2.51.0
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.97.0-rc.2655b88
+  version: 0.97.0
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
   version: 0.12.0
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.15-rc3
+version: 2.4.15-rc4
