[skip ci] [CI SKIP] setting kubefirst chart to release version 2.4.15
skip-checks:true

--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,6 +1,6 @@
 console:
   domain: kubefirst.dev
 global:
-  kubefirstVersion: 2.4.15-rc4
+  kubefirstVersion: 2.4.15
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
