--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,6 +1,6 @@
 console:
   domain: kubefirst.dev
 global:
-  kubefirstVersion: 2.6.0-rc1
+  kubefirstVersion: v2.4.16-rc2
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
