--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -5,11 +5,11 @@ dependencies:
   version: 2.52.0
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
-  version: 0.97.0
+  version: 0.98.0-rc.520e753
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
   version: 0.12.0
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.16-rc0
+version: 2.4.16-rc1
