--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 dependencies:
 - name: console
   repository: https://charts.kubefirst.com
-  version: 2.52.0
+  version: 2.53.0-rc.9ab210e
 - name: kubefirst-api
   repository: https://charts.kubefirst.com
   version: 0.98.0-rc.520e753
@@ -12,4 +12,4 @@ dependencies:
 description: kubefirst helm chart
 name: kubefirst
 type: application
-version: 2.4.16-rc2
+version: 2.4.16-rc3
