--- a/charts/kubefirst/values.yaml
+++ b/charts/kubefirst/values.yaml
@@ -1,6 +1,6 @@
 console:
   domain: kubefirst.dev
 global:
-  kubefirstVersion: v2.4.16
+  kubefirstVersion: v2.4.17-rc1
 kubefirst-api-ee:
   existingSecret: kubefirst-initial-secrets
