--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -1,13 +1,13 @@
 apiVersion: v2
 dependencies:
 - name: console
-  repository: https://charts.konstruct.io
+  repository: https://charts.kubefirst.com
   version: 2.55.0
 - name: kubefirst-api
   repository: https://charts.konstruct.io
-  version: 0.98.0
+  version: 0.99.0-rc.3ac4fce
 - name: kubefirst-api-ee
-  repository: https://charts.konstruct.io
+  repository: https://charts.kubefirst.com
   version: 0.12.0
 description: kubefirst helm chart
 name: kubefirst
