--- a/charts/kubefirst/Chart.yaml
+++ b/charts/kubefirst/Chart.yaml
@@ -4,8 +4,8 @@ dependencies:
   repository: https://charts.kubefirst.com
   version: 2.55.0
 - name: kubefirst-api
-  repository: https://charts.kubefirst.com
-  version: 0.98.0
+  repository: https://charts.konstruct.io
+  version: 0.99.0-rc.3ac4fce
 - name: kubefirst-api-ee
   repository: https://charts.kubefirst.com
   version: 0.12.0
